@@ -1,3 +1,8 @@
+2003-10-16  Johan Rydberg  <jrydberg@night.trouble.net>
+
+	* Makefile.am (libc_parts_a_SOURCES): Add assert.h.
+	* assert.h: New file.
+
 2003-09-19  Marcus Brinkmann  <marcus@gnu.org>
 
 	* ctype.h, errno.h, errno.c: New files.
